# synnet

./: .gitignore  LICENSE  pyproject.toml
examples/: __main__.py
src/axonlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/axonlib/base/: __init__.py  activation_function_base.py  learnable_layer_base.py  loss_function_base.py  utility_layer_base.py
src/axonlib/data/: __init__.py
src/axonlib/layers/: convolution.py  dense.py  dropout.py  flatten.py  pool.py  reshape.py
src/axonlib/layers/activation_functions/: relu.py  sigmoid.py  softmax.py  swish.py  tanh.py
src/axonlib/layers/helpers/: convolution_helpers.py
src/axonlib/model/: sequential.py
src/axonlib/model/loss_functions/: cce.py  mse.py
src/axonlib/optimizers/: adam.py  no_optimizer.py
src/synnet/: __init__.py
src/synnet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/synnet/base/: activation_function_base.py  learnable_layer_base.py  loss_function_base.py  optimizer_base.py  utility_layer_base.py
src/synnet/data/: dataloader.py
src/synnet/layers/: __init__.py  convolution.py  dense.py  dropout.py  flatten.py  pool.py  reshape.py
src/synnet/layers/activation_functions/: __init__.py  relu.py  sigmoid.py  softmax.py  swish.py  tanh.py
src/synnet/layers/helpers/: convolution_helpers.py  parameter_init.py  training_display.py
src/synnet/model/: sequential.py
src/synnet/model/helpers/: training_display.py
src/synnet/model/loss_functions/: __init__.py  cce.py  mse.py
src/synnet/optimizers/: __init__.py  adam.py  no_optimizer.py
